Update and rename deepseek_html_20250719_f8b82b (1).html to index.html

--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
             <h1>Sales Training + Guaranteed Internship</h1>
             <p>Complete our focused training in 2-7 days and start your internship immediately with our partner companies</p>
             <div class="price-tag">Only ₹999</div>
-            <a href="#" class="cta-button" id="enrollNowBtn">Enroll Now</a>
+            <a href="https://rzp.io/rzp/LdmRRad" class="cta-button" id="enrollNowBtn">Enroll Now</a>
             
             <div class="guarantee-badge">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -846,7 +846,7 @@
         <div class="container">
             <h2>Ready to Launch Your Sales Career?</h2>
             <p>Get trained and placed in days, not months. Your guaranteed internship awaits.</p>
-            <a href="#" class="cta-button" id="enrollNowBtn2">Enroll Now for ₹999</a>
+            <a href="https://rzp.io/rzp/LdmRRad" class="cta-button" id="enrollNowBtn2">Enroll Now for ₹999</a>
             <div class="guarantee-text">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
