--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
         
         try {
             // Send data to backend/EmailJS (silently in background)
-            await emailjs.send('YOUR_EMAILJS_SERVICE_ID', 'YOUR_ADMIN_TEMPLATE_ID', {
+            await emailjs.send('service_o6k0gbe', 'service_o6k0gbe', {
                 student_name: name,
                 student_email: email,
                 program_name: "Sales Training + Internship Program",
