--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         // Initialize EmailJS with your User ID
-        emailjs.init('YOUR_EMAILJS_USER_ID');
+        emailjs.init('EdCud8GpxeDBsipIw');
     </script>
 </head>
 <body>
