--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">SalesExpress</div>
+                <div class="logo">SalesAlchemy</div>
                 <button class="mobile-menu-button">☰</button>
             </nav>
         </div>
@@ -862,7 +862,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column footer-about">
-                    <h3>SalesExpress</h3>
+                    <h3>SalesAlchemy</h3>
                     <p>1-week sales training program with internship opportunities.</p>
                 </div>
                 <div class="footer-column">
@@ -885,13 +885,13 @@
                 <div class="footer-column">
                     <h3>Contact</h3>
                     <ul>
-                        <li>hello@salesexpress.in</li>
-                        <li>+91 XXXXX XXXXX</li>
+                        <li>contact.salesalchemy@gmail.com</li>
+                    
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                &copy; 2023 SalesExpress. All rights reserved.
+                &copy; 2024 SalesAlchemy. All rights reserved.
             </div>
         </div>
     </footer>
