--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                         <p>The 1-week training gave me confidence to approach clients. I'm now interning at a marketing firm with a small stipend while continuing my studies.</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Neha R." class="author-avatar">
+                        <img src="https://randomuser.me/api/portraits/women/44.j" alt="Neha R." class="author-avatar">
                         <div class="author-info">
                             <h4>Neha R.</h4>
                             <p>College Student</p>
@@ -806,7 +806,7 @@
                         <p>I learned practical skills that helped me secure an internship immediately after the program. The training was totally worth the investment.</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Arjun M." class="author-avatar">
+                        <img src="https://randomuser.me/api/portraits/men/32.g" alt="Arjun M." class="author-avatar">
                         <div class="author-info">
                             <h4>Arjun M.</h4>
                             <p>Recent Graduate</p>
@@ -818,7 +818,7 @@
                         <p>As someone with no sales experience, this program gave me the foundation I needed. The internship opportunity was exactly what I was looking for.</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Priya K." class="author-avatar">
+                        <img src="https://randomuser.me/api/portraits/women/68.g" alt="Priya K." class="author-avatar">
                         <div class="author-info">
                             <h4>Priya K.</h4>
                             <p>Career Changer</p>
