--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
             margin: 0 auto;
             padding: 0 20px;
         }
+        .author-avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0f0f0;
+    color: var(--primary);
+    font-size: 24px;
+    border: 2px solid var(--primary);
+}
+
+.author-avatar i {
+    color: var(--primary);
+}
         
         /* Header Styles */
         header {
@@ -782,53 +799,59 @@
     <!-- Partners Section -->
   
     <!-- Testimonials Section -->
-    <section class="testimonials" id="testimonials">
-        <div class="container">
-            <div class="section-title">
-                <h2>What Our Students Say</h2>
-                <p>Hear from past participants of our training program</p>
+  <!-- Testimonials Section -->
+<section class="testimonials" id="testimonials">
+    <div class="container">
+        <div class="section-title">
+            <h2>What Our Students Say</h2>
+            <p>Hear from past participants of our training program</p>
+        </div>
+        <div class="testimonial-grid">
+            <div class="testimonial-card">
+                <div class="testimonial-content">
+                    <p>The 1-week training gave me confidence to approach clients. I'm now interning at a marketing firm with a small stipend while continuing my studies.</p>
+                </div>
+                <div class="testimonial-author">
+                    <div class="author-avatar">
+                        <i class="fas fa-user-circle"></i>
+                    </div>
+                    <div class="author-info">
+                        <h4>Neha R.</h4>
+                        <p>College Student</p>
+                    </div>
+                </div>
             </div>
-            <div class="testimonial-grid">
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        <p>The 1-week training gave me confidence to approach clients. I'm now interning at a marketing firm with a small stipend while continuing my studies.</p>
+            <div class="testimonial-card">
+                <div class="testimonial-content">
+                    <p>I learned practical skills that helped me secure an internship immediately after the program. The training was totally worth the investment.</p>
+                </div>
+                <div class="testimonial-author">
+                    <div class="author-avatar">
+                        <i class="fas fa-user-circle"></i>
                     </div>
-                    <div class="testimonial-author">
-                        <img src="https://randomuser.me/api/portraits/women/44.j" alt="Neha R." class="author-avatar">
-                        <div class="author-info">
-                            <h4>Neha R.</h4>
-                            <p>College Student</p>
-                        </div>
+                    <div class="author-info">
+                        <h4>Arjun M.</h4>
+                        <p>Recent Graduate</p>
                     </div>
                 </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        <p>I learned practical skills that helped me secure an internship immediately after the program. The training was totally worth the investment.</p>
-                    </div>
-                    <div class="testimonial-author">
-                        <img src="https://randomuser.me/api/portraits/men/32.g" alt="Arjun M." class="author-avatar">
-                        <div class="author-info">
-                            <h4>Arjun M.</h4>
-                            <p>Recent Graduate</p>
-                        </div>
-                    </div>
+            </div>
+            <div class="testimonial-card">
+                <div class="testimonial-content">
+                    <p>As someone with no sales experience, this program gave me the foundation I needed. The internship opportunity was exactly what I was looking for.</p>
                 </div>
-                <div class="testimonial-card">
-                    <div class="testimonial-content">
-                        <p>As someone with no sales experience, this program gave me the foundation I needed. The internship opportunity was exactly what I was looking for.</p>
+                <div class="testimonial-author">
+                    <div class="author-avatar">
+                        <i class="fas fa-user-circle"></i>
                     </div>
-                    <div class="testimonial-author">
-                        <img src="https://randomuser.me/api/portraits/women/68.g" alt="Priya K." class="author-avatar">
-                        <div class="author-info">
-                            <h4>Priya K.</h4>
-                            <p>Career Changer</p>
-                        </div>
+                    <div class="author-info">
+                        <h4>Priya K.</h4>
+                        <p>Career Changer</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
