--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
         } catch (error) {
             console.error('Email sending failed:', error);
             // Still redirect to payment even if email fails
-            window.location.href = "https://rzp.io/rzp/LdmRRad";
+            window.location.href = "https://rzp.io/rzp/HET5hd7M";
         } finally {
             submitEnrollmentBtn.classList.remove('loading');
         }
