--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
             console.log('Email sent successfully!');
             
             // Redirect to Razorpay payment link
-            window.location.href = "https://rzp.io/rzp/LdmRRad";
+            window.location.href = "https://rzp.io/rzp/HET5hd7M";
             
         } catch (error) {
             console.error('Email sending failed:', error);
