--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
     </section>
 
     <!-- Features Section -->
-    <section class="features">
+    <section class="features" id="features">
         <div class="container">
             <div class="section-title">
                 <h2>Why Choose Our Program</h2>
