--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container">
+        <div class="container" id="footer">
             <div class="footer-grid">
                 <div class="footer-column footer-about">
                     <h3>SalesAlchemy</h3>
@@ -1024,8 +1024,8 @@
                 <div class="footer-column">
                     <h3>Support</h3>
                     <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#faq">FAQ</a></li>
+                        <li><a href="#footer">Contact Us</a></li>
           
                     </ul>
                 </div>
