--- a/index.html
+++ b/index.html
@@ -1129,12 +1129,12 @@
             console.log('Email sent successfully!');
             
             // Redirect to Razorpay payment link
-            window.location.href = "https://rzp.io/rzp/HET5hd7M";
+            window.location.href = "https://rzp.io/rzp/g9PEcU18";
             
         } catch (error) {
             console.error('Email sending failed:', error);
             // Still redirect to payment even if email fails
-            window.location.href = "https://rzp.io/rzp/HET5hd7M";
+            window.location.href = "https://rzp.io/rzp/g9PEcU18";
         } finally {
             submitEnrollmentBtn.classList.remove('loading');
         }
