--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
         
         try {
             // Send data to EmailJS
-            await emailjs.send('service_o6k0gbe', 'template_2yyygqh', {
+            await emailjs.send('service_vjuddke', 'template_2yyygqh', {
                 name: name,
                 email: email,
                 program: "Sales Training + Internship Program",
